Fixed bug with ItemList overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body,
   height: 100%;
 }
 
-ul {
+.overflow-y-overlay {
   overflow-y: overlay;
 }
 
